<resources>
    <string name="app_name">ComponentsOfAndroid</string>
    <string name="activity">Activity</string>
    <string name="broadcast_receiver">broadcast receiver</string>
    <string name="service">Service</string>
    <string name="please_select_your_category">Please Select Your Category</string>
    <string name="content_provider">Content Provider</string>
    <string name="components_of_android">Components of Android</string>
    <string name="activity_life_cycle">Activity Life Cycle</string>
    <string name="go_to_second_activity">Go To Second Activity</string>
    <string name="go_to_first_activity">Go To First Activity</string>
    <string name="android_service_example">Android Service Example</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="broadcast_receiver_example">Broadcast Receiver Example</string>
    <string name="click_here">Click Here</string>
    <string name="insert_data">Insert Data</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="content_provider_example">Content Provider Example</string>
    <string name="click">Click</string>
    <string name="click_on_airplane_mode">Click on Airplane Mode</string>
</resources>