<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="30dp"
        android:text="@string/components_of_android"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="465dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_margin="20sp"
            android:columnCount="2"
            android:rowCount="2">


            <Button
                android:id="@+id/activityButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@drawable/button_round_bg"
                android:text="@string/activity"
                android:onClick="goToActivity"/>

            <Button
                android:id="@+id/serviceButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="1"
                android:translationX="10dp"
                android:background="@drawable/button_round_bg"
                android:text="@string/service"
                android:onClick="goToService"/>
            <Button
                android:id="@+id/broadcastButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="0"
                android:translationY="10dp"
                android:background="@drawable/button_round_bg"
                android:text="@string/broadcast_receiver"
                android:onClick="goToBroadcastReceiver"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="1"
                android:translationX="10dp"
                android:translationY="10dp"
                android:background="@drawable/button_round_bg"
                android:text="@string/content_provider"
                android:onClick="goToContentProvider"/>







        </GridLayout>

        <TextView
            android:id="@+id/testing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/please_select_your_category"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:translationY="-25dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>